@@ -1,3 +1,6 @@
+Apr 09, 2016: libarchive 3.1.901a released
+    Another test release in preparation for 3.2.0
+
 Feb 13, 2016: libarchive 3.1.900a released
     This is a test release in preparation for 3.2.0
 
